# todo-with-poetry

./: README.md  pyproject.toml
tests/: test_main.py
uitclass/: conn_string.py  db.py  main.py
