[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["Aayman-star <aayman.khalid1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlalchemy = "^2.0.28"
sqlmodel = "^0.0.16"
psycopg-binary = "^3.1.18"
psycopg2-binary = "^2.9.9"
psycopg = "^3.1.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
